[gd_scene load_steps=3 format=3 uid="uid://r8by3xehkx66"]

[ext_resource type="Script" path="res://scripts/ui/menu.gd" id="1_xlpgv"]
[ext_resource type="Texture2D" uid="uid://b6w2uueqnm008" path="res://assets/textures/ui/Bg.jpg" id="2_umh83"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xlpgv")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_umh83")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -945.0
offset_top = -227.0
offset_right = -723.0
offset_bottom = -189.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.97, 1.97)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 25
text = "Unstable Reality"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 58.0
offset_top = 140.0
offset_right = 305.0
offset_bottom = -258.0
grow_vertical = 2
scale = Vector2(1.378, 1.378)
theme_override_constants/separation = 20
alignment = 1

[node name="Info" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Info"

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="Poll" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "Poll"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="InfoPopup" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -463.0
offset_top = -354.0
offset_right = 37.0001
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.095, 2.095)

[node name="ColorRect" type="ColorRect" parent="InfoPopup"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -14.0
offset_right = 7.99988
grow_horizontal = 2
grow_vertical = 2
color = Color(0.486275, 1, 1, 0.376471)

[node name="InfoClose" type="Button" parent="InfoPopup"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -43.1982
offset_right = 7.80176
offset_bottom = 44.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 26
text = "X"
flat = true

[node name="Label" type="Label" parent="InfoPopup"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 41.0
offset_right = -0.00012207
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 18
text = "Hey!
This is a simple game and if you like the concept it can later be a full game.

Directions:
WASD to move, Space to jump, E to interact, Q for journal

Objective:
Look around for clues, you have 1 minute and 30 seconds before a time anomaly, figure out how to stop it."
horizontal_alignment = 1
autowrap_mode = 2

[connection signal="pressed" from="VBoxContainer/Info" to="." method="_on_info_pressed"]
[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Poll" to="." method="_on_poll_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="InfoPopup/InfoClose" to="." method="_on_info_close_pressed"]
